# poi_pi

./: CMakeLists.txt  README
buildwin/: NSIS.template.in  sqlite3.exp  sqlite3.lib
cmake/: FindSQLite3.cmake  PluginSQLite.cmake
po/: POTFILES.in  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  gl.po  goodanchorage_pi.pot  hu.po  it.po  nb.po  nl.po  pl.po  pt.po  ru.po  sv.po  tr.po  vi.po  zh.po
src/: goodanchorage_pi.cpp  goodanchorage_pi.h  icons.cpp  icons.h  my_plugin_pi.cpp  my_plugin_pi.h
src/img/: README
